--- a/functions/views/dev/case-study/lazyouts.hbs
+++ b/functions/views/dev/case-study/lazyouts.hbs
@@ -34,7 +34,7 @@
 						data-src="/images/nav-badge@3x.png"
 						src="/images/nav-badge@3x.png" alt="Product Designer, Tyler Richardson" class="nav-art lazyload">
 						<a href="/" class="nav-link">About Me</a>
-						<a href="/case-studies/" class="nav-link nav-current-view">Case Studies</a>
+						<a href="/case-studies/" class="nav-link">Case Studies</a>
 				</div>
 			</div>
 		</div>
@@ -67,33 +67,92 @@
 		<!-- Anchor to Main Content from the Hero -->
 		<a name="case-study"></a>
 
+		<div class="content cards content--overview d1c t1c m1c case-study__content">
+
+			<div class="card card--flex">
+
+				<div class="card__col--75">
+					<h3 class="title">Overview</h3>
+					<h4 class="subtitle">Project Description</h4>
+					<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst. Cloud bread schlitz waistcoat, venmo hell of cray microdosing single-origin coffee taxidermy shaman raclette affogato freegan.</p>
+				</div>
+
+				<div class="card__col--25">
+					<h4 class="subtitle">Client</h4>
+					<img class="client-brand" src="/images/case-studies/quotedcar-brand.png" alt="QuotedCar, LLC" />
+					<h4 class="subtitle">Role</h4>
+					<ul class="list role-list">
+						<li>Project Manager</li>
+						<li>Front-End Developer</li>
+					</ul>
+					<h4 class="subtitle">Skills &amp; Tools Involved</h4>
+					<div class="tags">
+						<div class="tag">HTML</div>
+						<div class="tag">CSS</div>
+						<div class="tag">Sass</div>
+						<div class="tag">JavaScript</div>
+						<div class="tag">jQuery</div>
+					</div>
+				</div>
+
+			</div>
+
+		</div>
+
+		<div class="stripe black case-study__content">
+
+			<div class="stripe_copy-container">
+
+				<h3 class="title">The Problem</h3>
+				<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst. Cloud bread schlitz waistcoat, venmo hell of cray microdosing single-origin coffee taxidermy shaman raclette affogato freegan.</p>
+
+			</div>
+
+			<div class="stripe_stat-container">
+				<h3 class="title--stat">69%</h3>
+				<p class="copy--stat">Occupy adaptogen kinfolk thundercats blog church-key pork belly.</p>
+			</div>
+
+			<div class="stripe_stat-container">
+				<h3 class="title--stat">27%</h3>
+				<p class="copy--stat">Viral man braid 3 wolf moon tattooed mustache..</p>
+			</div>
+
+		</div>
+
 		<div class="content cards d1c t1c m1c case-study__content">
 
 			<div class="card">
 
-				<h3 class="card-title">Overview</h3>
+				<h3 class="title">The Process</h3>
 
-				<h4 class="card-subtitle">Project Description</h4>
-				<p class="card-copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst. Cloud bread schlitz waistcoat, venmo hell of cray microdosing single-origin coffee taxidermy shaman raclette affogato freegan.</p>
+				<h4 class="subtitle">Needs Assesment</h4>
+				<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst.</p>
 
-				<h4 class="card-subtitle">Client</h4>
-				<img class="client-brand" src="/images/case-studies/quotedcar-brand.png" alt="QuotedCar, LLC" />
+				<h4 class="subtitle">Development Considerations</h4>
+				<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst.</p>
 
-				<h4 class="card-subtitle">Role</h4>
-				<ul class="card-list role-list">
-					<li>Project Manager</li>
-					<li>Front-End Developer</li>
-				</ul>
+			</div>
 
-				<h4 class="card-subtitle">Skills &amp; Tools Involved</h4>
-				<div class="tags">
-					<div class="tag">HTML</div>
-					<div class="tag">CSS</div>
-					<div class="tag">Sass</div>
-					<div class="tag">JavaScript</div>
-					<div class="tag">jQuery</div>
-				</div>
+		</div>
 
+		<div class="stripe green case-study__content">
+
+			<div class="stripe_copy-container">
+
+				<h3 class="title">The Solution</h3>
+				<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst. Cloud bread schlitz waistcoat, venmo hell of cray microdosing single-origin coffee taxidermy shaman raclette affogato freegan.</p>
+
+			</div>
+
+			<div class="stripe_stat-container">
+				<h3 class="title--stat">34%</h3>
+				<p class="copy--stat">Occupy adaptogen kinfolk thundercats blog church-key pork belly.</p>
+			</div>
+
+			<div class="stripe_stat-container">
+				<h3 class="title--stat">66%</h3>
+				<p class="copy--stat">Viral man braid 3 wolf moon tattooed mustache..</p>
 			</div>
 
 		</div>
