Dynamic SVG timeline and modals

--- a/functions/views/dev/index.hbs
+++ b/functions/views/dev/index.hbs
@@ -211,11 +211,11 @@
 		<!-- Initialize Firebase -->
 		<script src="/__/firebase/init.js"></script>
 		<!-- jQuery -->
-		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+		<script src="/javascripts/plugins/jquery.min.js"></script>
 		<!-- Lettering JS -->
 		<script src="/javascripts/jquery.lettering-0.6.1.min.js"></script>
 		<!-- Lazysizes -->
-		<script src="javascripts/plugins/lazysizes.min.js" async></script>
+		<script src="/javascripts/plugins/lazysizes.min.js" async></script>
 		<!-- UI -->
 		<script src="/javascripts/ui.min.js"></script>
 	</body>
