--- a/functions/views/dev/case-studies.hbs
+++ b/functions/views/dev/case-studies.hbs
@@ -424,7 +424,7 @@
 		<!-- Initialize Firebase -->
 		<script src="/__/firebase/init.js"></script>
 		<!-- jQuery -->
-		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+		<script src="/javascripts/plugins/jquery.min.js"></script>
 		<!-- Lettering JS -->
 		<script src="/javascripts/jquery.lettering-0.6.1.min.js"></script>
 		<!-- Lazysizes -->
