--- a/functions/views/dev/case-study/lazyouts.hbs
+++ b/functions/views/dev/case-study/lazyouts.hbs
@@ -7,8 +7,11 @@
 			<meta charset="utf-8">
 			<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-			<link rel="manifest" href="../manifest.json">
+			<link rel="manifest" href="../../manifest.json">
 			<link rel="apple-touch-icon" href="../images/icon-192.png">
+		<!-- JS -->
+			<!-- SVG.JS -->
+			<script src="../../javascripts/plugins/svg.min.js" async></script>
 		<!-- CSS -->
 			<!-- UI -->
 			<link rel="stylesheet" href="/stylesheets/css/ui.min.css" rel="preload" as="style" />
@@ -67,6 +70,7 @@
 		<!-- Anchor to Main Content from the Hero -->
 		<a name="case-study"></a>
 
+		<!-- Case Study Overview -->
 		<div class="content cards content--overview d1c t1c m1c case-study__content">
 
 			<div class="card card--flex">
@@ -75,6 +79,11 @@
 					<h3 class="title">Overview</h3>
 					<h4 class="subtitle">Project Description</h4>
 					<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst. Cloud bread schlitz waistcoat, venmo hell of cray microdosing single-origin coffee taxidermy shaman raclette affogato freegan.</p>
+					<div class="card--img-row">
+						<img class="img-row__img" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="" />
+						<img class="img-row__img" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="" />
+						<img class="img-row__img" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="" />
+					</div>
 				</div>
 
 				<div class="card__col--25">
@@ -99,6 +108,7 @@
 
 		</div>
 
+		<!-- "Problem" -->
 		<div class="stripe black case-study__content">
 
 			<div class="stripe_copy-container">
@@ -120,22 +130,93 @@
 
 		</div>
 
-		<div class="content cards d1c t1c m1c case-study__content">
+		<!-- "Process" -->
+		<div class="content cards d1c t1c m1c case-study__content process_content">
 
 			<div class="card">
 
 				<h3 class="title">The Process</h3>
 
-				<h4 class="subtitle">Needs Assesment</h4>
-				<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst.</p>
+				<div class="timeline">
 
-				<h4 class="subtitle">Development Considerations</h4>
-				<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst.</p>
+					<div id="timeline-track">
+
+
+					</div>
+
+					<div class="timeline-content">
+
+						<div class="interval">
+							<h4 class="subtitle">Testing, Etc.</h4>
+							<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst.</p>
+						</div>
+
+						<div class="timeline--img-row interval--img-row">
+							<img class="timeline--img-row__img modal_trigger--open" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="TITLE 1 Kale chips af mustache" data-description="1 Lumbersexual quinoa unicorn tilde trust fund, offal shabby chic sartorial shoreditch coloring book. Pinterest plaid chia asymmetrical wolf vape vinyl cray godard gastropub tattooed migas poke knausgaard." />
+							<img class="timeline--img-row__img modal_trigger--open" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="TITLE 2 Kale chips af mustache" data-description="2 Lumbersexual quinoa unicorn tilde trust fund, offal shabby chic sartorial shoreditch coloring book. Pinterest plaid chia asymmetrical wolf vape vinyl cray godard gastropub tattooed migas poke knausgaard." />
+							<img class="timeline--img-row__img modal_trigger--open" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="TITLE 3 Kale chips af mustache" data-description="3 Lumbersexual quinoa unicorn tilde trust fund, offal shabby chic sartorial shoreditch coloring book. Pinterest plaid chia asymmetrical wolf vape vinyl cray godard gastropub tattooed migas poke knausgaard." />
+						</div>
+
+						<div class="interval">
+							<h4 class="subtitle">Development Considerations</h4>
+							<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst.</p>
+						</div>
+
+						<div class="subinterval">
+							<h4 class="subtitle">Development Considerations</h4>
+							<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst.</p>
+						</div>
+
+						<div class="timeline--img-row subinterval--img-row">
+							<img class="timeline--img-row__img" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="" />
+							<img class="timeline--img-row__img" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="" />
+							<img class="timeline--img-row__img" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="" />
+						</div>
+
+						<div class="subinterval">
+							<h4 class="subtitle">Development Considerations</h4>
+							<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst.</p>
+						</div>
+
+						<div class="interval">
+							<h4 class="subtitle">Planning</h4>
+							<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst.</p>
+						</div>
+
+						<div class="subinterval">
+							<h4 class="subtitle">Development Considerations</h4>
+							<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst.</p>
+						</div>
+
+						<div class="interval">
+							<h4 class="subtitle">Execution</h4>
+							<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst.</p>
+						</div>
+
+						<div class="subinterval">
+							<h4 class="subtitle">Development Considerations</h4>
+							<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst.</p>
+						</div>
+
+						<div class="subinterval">
+							<h4 class="subtitle">Development Considerations</h4>
+							<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst.</p>
+						</div>
+
+						<div class="subinterval">
+							<h4 class="subtitle">Development Considerations</h4>
+							<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst.</p>
+						</div>
+
+					</div>
+
+				</div>
 
 			</div>
 
 		</div>
 
+		<!-- Solution -->
 		<div class="stripe green case-study__content">
 
 			<div class="stripe_copy-container">
@@ -157,6 +238,23 @@
 
 		</div>
 
+		<!-- Case Studies Pager -->
+		<div class="pager">
+			<div class="pager__title">
+				<h3 class="title">More Case Studies</h3>
+			</div>
+			<div class="pager__links">
+				<a class="page__prev" href="/quotedcar-logo/">
+					<i class="material-icons">keyboard_backspace</i>
+					<h4 class="subtitle">QuotedCar's Logo Design</h4>
+				</a>
+				<a class="page__next" href="/online-price-book/">
+					<h4 class="subtitle">Online Price Book</h4>
+					<i class="material-icons">keyboard_backspace</i>
+				</a>
+			</div>
+		</div>
+
 		<!-- Footer -->
 		<div class="footer">
 			<div class="copyright-year">
@@ -171,6 +269,20 @@
 			<h2 class="copyright-attribution">Tyler Richardson</h2>
 			<p class="copyright-copy">All Rights Reserved</p>
 		</div>
+
+		<!-- Modal -->
+		<div class="modal hide">
+			<div class="modal_card">
+				<img class="modal_img" src="#" alt="" />
+				<div class="modal_type">
+					<h3 class="title"></h3>
+					<p class="copy"></p>
+				</div>
+			</div>
+			<div class="modal_bg modal_trigger--close hide">
+			</div>
+		</div>
+
 		<!-- JS -->
 		<!-- The core Firebase JS SDK is always required and must be listed first -->
 		<script src="/__/firebase/7.7.0/firebase-app.js"></script>
@@ -180,11 +292,13 @@
 		<!-- Initialize Firebase -->
 		<script src="/__/firebase/init.js"></script>
 		<!-- jQuery -->
-		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+		<script src="../../javascripts/plugins/jquery.min.js"></script>
 		<!-- Lettering JS -->
-		<script src="/javascripts/jquery.lettering-0.6.1.min.js"></script>
+		<script src="../../javascripts/jquery.lettering-0.6.1.min.js"></script>
 		<!-- Lazysizes -->
-		<script src="/javascripts/plugins/lazysizes.min.js" async></script>
+		<script src="../../javascripts/plugins/lazysizes.min.js" async></script>
+		<!-- SVG.JS -->
+		<!-- <script src="../../javascripts/plugins/svg.min.js" async></script> -->
 		<!-- UI -->
 		<script src="/javascripts/ui.min.js"></script>
 	</body>
