--- a/public/stylesheets/css/case-study.css
+++ b/public/stylesheets/css/case-study.css
@@ -50,7 +50,7 @@ ul.list.role-list li {
   box-shadow: 0 0 10px 0 #E3E3E3;
   border-radius: 3px;
   padding-top: 45px;
-  padding-bottom: 15px; }
+  padding-bottom: 25px; }
   @media (max-width: 700px) {
     .case-study__content > .card {
       box-shadow: none; } }
@@ -93,6 +93,102 @@ ul.list.role-list li {
     .card__col--25 > ul.list.role-list,
     .card__col--25 > .tags {
       padding-left: 50px; } }
+
+.card .card--img-row {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-row-gap: 25px;
+  grid-column-gap: 25px;
+  margin: 0;
+  padding: 0 50px; }
+  @media (max-width: 1300px) {
+    .card .card--img-row {
+      padding-bottom: 35px; } }
+  @media (max-width: 700px) {
+    .card .card--img-row {
+      grid-template-columns: repeat(1, 1fr); } }
+
+.card .card--img-row img.img-row__img {
+  width: 100%;
+  height: auto;
+  border: 1px solid #e3e3e3; }
+
+.timeline {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 0 50px 25px 50px; }
+
+.timeline > #timeline-track {
+  height: 100%;
+  flex-basis: 80px;
+  flex-grow: 1; }
+  @media (max-width: 700px) {
+    .timeline > #timeline-track {
+      display: none; } }
+
+#timeline-track > svg {
+  min-height: inherit;
+  margin: 5.5px 0 0 0;
+  padding: 0; }
+
+.timeline > .timeline-content {
+  height: 100%;
+  flex-grow: 1;
+  position: relative;
+  padding-left: 25px; }
+  @media (max-width: 700px) {
+    .timeline > .timeline-content {
+      padding-left: 0; } }
+
+.timeline-content > .interval,
+.timeline-content > .subinterval {
+  margin-bottom: 25px; }
+
+.interval > .subtitle {
+  padding: 0;
+  margin: 0; }
+
+.interval > .copy {
+  padding: 0;
+  margin: 0; }
+
+.subinterval > .subtitle {
+  font-family: "Montserrat", sans-serif;
+  color: #EA3F85;
+  font-size: 16px;
+  font-weight: 400;
+  padding: 0 0 0 0;
+  margin: 0; }
+
+.subinterval > .copy {
+  padding: 0 0 0 0;
+  margin: 0; }
+
+.timeline--img-row {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-row-gap: 25px;
+  grid-column-gap: 25px;
+  margin: 0 0 50px 0;
+  padding: 0; }
+  @media (max-width: 700px) {
+    .timeline--img-row {
+      grid-template-columns: repeat(1, 1fr); } }
+
+.timeline--img-row.interval--img-row {
+  margin: 0 0 50px 0;
+  padding: 0; }
+
+.timeline--img-row.subinterval--img-row {
+  margin: 0 0 50px 0;
+  padding: 0; }
+
+.timeline--img-row > .timeline--img-row__img {
+  width: 100%;
+  height: auto;
+  border: 1px solid #e3e3e3; }
 
 .stripe {
   width: 100%;
@@ -175,5 +271,106 @@ ul.list.role-list li {
   @media (max-width: 700px) {
     .stripe_stat-container .copy--stat {
       padding: 0 50px; } }
+
+.pager {
+  background: #ADFA2C;
+  width: 100%;
+  height: auto; }
+
+.pager .pager__title {
+  width: 100%;
+  padding: 45px 50px 35px 50px;
+  margin: 0; }
+
+.pager__title .title {
+  font-family: "Playfair Display SC", serif;
+  color: #030b08;
+  font-size: 27px;
+  letter-spacing: -0.85px;
+  line-height: 35px;
+  text-align: center;
+  padding: 0;
+  margin: 0; }
+
+.pager .pager__links {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  justify-content: center; }
+  @media (max-width: 700px) {
+    .pager .pager__links {
+      flex-direction: column; } }
+
+.pager__links .page__prev {
+  border-bottom: none;
+  border-top: 2px solid #97ed06;
+  border-right: 2px solid #97ed06;
+  flex-grow: 1;
+  flex-basis: 50%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 25px 50px;
+  margin: 0;
+  transition: 450ms; }
+  @media (max-width: 700px) {
+    .pager__links .page__prev {
+      border-right: none; } }
+
+.page__prev .material-icons {
+  color: #030b08;
+  font-size: 36px; }
+
+.page__prev .subtitle {
+  font-family: "Montserrat", sans-serif;
+  color: #030b08;
+  font-size: 15px;
+  font-weight: 900;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 24px;
+  padding: 0;
+  margin: 0; }
+
+.pager__links .page__next {
+  border-bottom: none;
+  border-top: 2px solid #97ed06;
+  flex-grow: 1;
+  flex-basis: 50%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 25px 50px;
+  margin: 0;
+  transition: 450ms; }
+
+.page__next .material-icons {
+  transform: rotate(180deg);
+  color: #030b08;
+  font-size: 36px; }
+
+.page__next .subtitle {
+  font-family: "Montserrat", sans-serif;
+  color: #030b08;
+  font-size: 15px;
+  font-weight: 900;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 24px;
+  padding: 0;
+  margin: 0; }
+
+.pager__links .page__prev:hover,
+.pager__links .page__prev:focus,
+.pager__links .page__prev:active,
+.pager__links .page__next:hover,
+.pager__links .page__next:focus,
+.pager__links .page__next:active {
+  background: #97ed06;
+  transition: 250ms; }
 
 /*# sourceMappingURL=case-study.css.map */
