--- a/public/stylesheets/css/ui.css
+++ b/public/stylesheets/css/ui.css
@@ -751,4 +751,80 @@ h1.hero-title > .char16 {
   margin: 5px 0 0 0;
   padding: 0; }
 
+.img-row__img,
+.timeline--img-row__img {
+  cursor: pointer; }
+
+.modal {
+  background: white;
+  color: #030b08;
+  display: none;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1001;
+  overflow-x: hidden;
+  overflow-y: auto;
+  width: 100%;
+  height: 100%; }
+
+.modal.modal--show {
+  display: flex; }
+
+.modal.modal--hide {
+  display: none; }
+
+.modal > .modal_card {
+  height: auto;
+  width: 800px;
+  background: #fff;
+  transition: .75s;
+  margin: 25px auto;
+  position: relative;
+  z-index: 1001;
+  padding-bottom: 50px; }
+
+.modal_type > .title {
+  font-family: "Playfair Display SC", serif;
+  color: #030b08;
+  font-size: 18px;
+  font-weight: 900;
+  letter-spacing: -0.85px;
+  line-height: 26px;
+  text-align: left;
+  padding: 0 50px 0 50px; }
+
+.modal_type > .copy {
+  ont-family: "Playfair Display SC", serif;
+  color: #030b08;
+  font-size: 18px;
+  letter-spacing: 0.2px;
+  line-height: 30px;
+  font-weight: 400;
+  text-align: left;
+  margin-top: 15px; }
+
+.modal_card > .modal_img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 25px; }
+
+.modal > .modal_bg {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  background: rgba(3, 11, 8, 0.95); }
+
+.modal_bg.modal--show {
+  display: block; }
+
+.modal_bg.modal--hide {
+  display: none; }
+
 /*# sourceMappingURL=ui.css.map */
