--- a/public/stylesheets/scss/ui.scss
+++ b/public/stylesheets/scss/ui.scss
@@ -56,6 +56,10 @@
 		// Blacks & Whites
 
 			$black-100: rgba(3, 11, 8, 1);
+			$black-95: rgba(3, 11, 8, 0.95);
+			$black-90: rgba(3, 11, 8, 0.90);
+			$black-85: rgba(3, 11, 8, 0.85);
+			$black-80: rgba(3, 11, 8, 0.80);
 			$black-75: rgba(3, 11, 8, 0.75);
 			$black-50: rgba(3, 11, 8, 0.50);
 			$black-25: rgba(3, 11, 8, 0.25);
@@ -1460,3 +1464,135 @@
 
 				}
 			}
+
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+// Modals
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+// Modal Trigger
+.img-row__img,
+.timeline--img-row__img {
+	cursor: pointer;
+}
+// Modal Container
+.modal {
+	background: $white-100;
+	color: $black-100;
+	display: none;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	align-items: center;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 1001;
+	overflow-x: hidden;
+	overflow-y: auto;
+	width: 100%;
+	height: 100%;
+	@media (max-width: 1300px) {
+
+	}
+	@media (max-width: 700px) {
+
+	}
+}
+
+.modal.modal--show {
+	display: flex;
+}
+
+.modal.modal--hide {
+	display: none;
+}
+
+	// Modal Card
+	.modal > .modal_card {
+		height: auto;
+		width: 800px;
+		background: #fff;
+		transition: .75s;
+		margin: 25px auto;
+		position: relative;
+		z-index: 1001;
+		padding-bottom: 50px;
+		@media (max-width: 1300px) {
+
+		}
+		@media (max-width: 700px) {
+
+		}
+	}
+
+		// Modal Type
+		.modal_type > .title {
+			font-family: $font-primary;
+			color: $black-100;
+			font-size: 18px;
+			font-weight: 900;
+			letter-spacing: -0.85px;
+			line-height: 26px;
+			text-align: left;
+			padding: 0 50px 0 50px;
+			@media (max-width: 1300px) {
+
+			}
+			@media (max-width: 700px) {
+
+			}
+		}
+
+		.modal_type > .copy {
+			ont-family: $font-primary;
+			color: $black-100;
+			font-size: 18px;
+			letter-spacing: 0.2px;
+			line-height: 30px;
+			font-weight: 400;
+			text-align: left;
+			margin-top: 15px;
+			@media (max-width: 1300px) {
+
+			}
+			@media (max-width: 700px) {
+
+			}
+		}
+
+		// Modal Images
+		.modal_card > .modal_img {
+			width: 100%;
+			height: auto;
+			margin-bottom: 25px;
+			@media (max-width: 1300px) {
+
+			}
+			@media (max-width: 700px) {
+
+			}
+		}
+
+	// Modal BG
+	.modal > .modal_bg {
+		height: 100vh;
+		width: 100vw;
+		position: fixed;
+		top: 0;
+		left: 0;
+		z-index: 1000;
+		background: $black-95;
+		@media (max-width: 1300px) {
+
+		}
+		@media (max-width: 700px) {
+
+		}
+	}
+
+	.modal_bg.modal--show {
+		display: block;
+	}
+
+	.modal_bg.modal--hide {
+		display: none;
+	}
