Dynamic background colors in modals based on dominant color

--- a/functions/views/dev/case-study/lazyouts.hbs
+++ b/functions/views/dev/case-study/lazyouts.hbs
@@ -9,7 +9,7 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<link rel="manifest" href="../../manifest.json">
 			<link rel="apple-touch-icon" href="../images/icon-192.png">
-		<!-- JS -->
+		<!-- JS (That's Necessary in <head>) -->
 			<!-- SVG.JS -->
 			<script src="../../javascripts/plugins/svg.min.js" async></script>
 		<!-- CSS -->
@@ -51,14 +51,14 @@
 			<!-- Hero Filter -->
 			<div class="hero-filter"></div>
 			<!-- Hero Buttons -->
-			<!-- <div class="hero-buttons">
-				<a href="#" class="hero-btn">
+			{{!-- <div class="hero-buttons">
+				<a href="" class="hero-btn">
 					<img src="../images/tyler.png" alt="Tyler Richardson" class="hero-btn--img">
 				</a>
-				<a href="#" class="hero-btn">
+				<a href="" class="hero-btn">
 					<i class="material-icons">email</i>
 				</a>
-			</div> -->
+			</div> --}}
 			<!-- View More CTA -->
 			<div class="hero-view-more-row">
 				<a href="#case-study" class="hero-view-more-btn heartbeat">
@@ -80,15 +80,15 @@
 					<h4 class="subtitle">Project Description</h4>
 					<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst. Cloud bread schlitz waistcoat, venmo hell of cray microdosing single-origin coffee taxidermy shaman raclette affogato freegan.</p>
 					<div class="card--img-row">
-						<img class="img-row__img" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="" />
-						<img class="img-row__img" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="" />
-						<img class="img-row__img" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="" />
+						<img class="img-row__img color" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="" data-hex="">
+						<img class="img-row__img color" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="" data-hex="">
+						<img class="img-row__img color" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="" data-hex="">
 					</div>
 				</div>
 
 				<div class="card__col--25">
 					<h4 class="subtitle">Client</h4>
-					<img class="client-brand" src="/images/case-studies/quotedcar-brand.png" alt="QuotedCar, LLC" />
+					<img class="client-brand" src="/images/case-studies/quotedcar-brand.png" alt="QuotedCar, LLC">
 					<h4 class="subtitle">Role</h4>
 					<ul class="list role-list">
 						<li>Project Manager</li>
@@ -152,9 +152,9 @@
 						</div>
 
 						<div class="timeline--img-row interval--img-row">
-							<img class="timeline--img-row__img modal_trigger--open" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="TITLE 1 Kale chips af mustache" data-description="1 Lumbersexual quinoa unicorn tilde trust fund, offal shabby chic sartorial shoreditch coloring book. Pinterest plaid chia asymmetrical wolf vape vinyl cray godard gastropub tattooed migas poke knausgaard." />
-							<img class="timeline--img-row__img modal_trigger--open" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="TITLE 2 Kale chips af mustache" data-description="2 Lumbersexual quinoa unicorn tilde trust fund, offal shabby chic sartorial shoreditch coloring book. Pinterest plaid chia asymmetrical wolf vape vinyl cray godard gastropub tattooed migas poke knausgaard." />
-							<img class="timeline--img-row__img modal_trigger--open" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="TITLE 3 Kale chips af mustache" data-description="3 Lumbersexual quinoa unicorn tilde trust fund, offal shabby chic sartorial shoreditch coloring book. Pinterest plaid chia asymmetrical wolf vape vinyl cray godard gastropub tattooed migas poke knausgaard." />
+							<img class="timeline--img-row__img color modal_trigger--open" src="../../images/case-studies/overview/overview_email-gen@2x.png" alt="TITLE 1 Kale chips af mustache" data-description="1 Lumbersexual quinoa unicorn tilde trust fund, offal shabby chic sartorial shoreditch coloring book. Pinterest plaid chia asymmetrical wolf vape vinyl cray godard gastropub tattooed migas poke knausgaard." data-hex="">
+							<img class="timeline--img-row__img color modal_trigger--open" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="TITLE 2 Kale chips af mustache" data-description="2 Lumbersexual quinoa unicorn tilde trust fund, offal shabby chic sartorial shoreditch coloring book. Pinterest plaid chia asymmetrical wolf vape vinyl cray godard gastropub tattooed migas poke knausgaard." data-hex="">
+							<img class="timeline--img-row__img color modal_trigger--open" src="../../images/case-studies/overview/overview_qc-logo@2x.png" alt="TITLE 3 Kale chips af mustache" data-description="3 Lumbersexual quinoa unicorn tilde trust fund, offal shabby chic sartorial shoreditch coloring book. Pinterest plaid chia asymmetrical wolf vape vinyl cray godard gastropub tattooed migas poke knausgaard." data-hex="">
 						</div>
 
 						<div class="interval">
@@ -168,9 +168,9 @@
 						</div>
 
 						<div class="timeline--img-row subinterval--img-row">
-							<img class="timeline--img-row__img" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="" />
-							<img class="timeline--img-row__img" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="" />
-							<img class="timeline--img-row__img" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="" />
+							<img class="timeline--img-row__img color" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="" data-hex="">
+							<img class="timeline--img-row__img color" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="" data-hex="">
+							<img class="timeline--img-row__img color" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="" data-hex="">
 						</div>
 
 						<div class="subinterval">
@@ -273,7 +273,7 @@
 		<!-- Modal -->
 		<div class="modal hide">
 			<div class="modal_card">
-				<img class="modal_img" src="#" alt="" />
+				<img class="modal_img" src="" alt="" data-hex="">
 				<div class="modal_type">
 					<h3 class="title"></h3>
 					<p class="copy"></p>
@@ -284,22 +284,22 @@
 		</div>
 
 		<!-- JS -->
-		<!-- The core Firebase JS SDK is always required and must be listed first -->
-		<script src="/__/firebase/7.7.0/firebase-app.js"></script>
-		<!-- TODO: Add SDKs for Firebase products that you want to use
-		     https://firebase.google.com/docs/web/setup#available-libraries -->
-		<script src="/__/firebase/7.7.0/firebase-analytics.js"></script>
-		<!-- Initialize Firebase -->
-		<script src="/__/firebase/init.js"></script>
-		<!-- jQuery -->
-		<script src="../../javascripts/plugins/jquery.min.js"></script>
-		<!-- Lettering JS -->
-		<script src="../../javascripts/jquery.lettering-0.6.1.min.js"></script>
-		<!-- Lazysizes -->
-		<script src="../../javascripts/plugins/lazysizes.min.js" async></script>
-		<!-- SVG.JS -->
-		<!-- <script src="../../javascripts/plugins/svg.min.js" async></script> -->
-		<!-- UI -->
-		<script src="/javascripts/ui.min.js"></script>
+			<!-- The core Firebase JS SDK is always required and must be listed first -->
+			<script src="/__/firebase/7.7.0/firebase-app.js"></script>
+			<!-- TODO: Add SDKs for Firebase products that you want to use
+			     https://firebase.google.com/docs/web/setup#available-libraries -->
+			<script src="/__/firebase/7.7.0/firebase-analytics.js"></script>
+			<!-- Initialize Firebase -->
+			<script src="/__/firebase/init.js"></script>
+			<!-- jQuery -->
+			<script src="../../javascripts/plugins/jquery.min.js"></script>
+			<!-- Lettering JS -->
+			<script src="../../javascripts/jquery.lettering-0.6.1.min.js"></script>
+			<!-- Lazysizes -->
+			<script src="../../javascripts/plugins/lazysizes.min.js" async></script>
+			<!-- node-vibrant -->
+			<script src="../../javascripts/plugins/vibrant.min.js"></script>
+			<!-- UI -->
+			<script src="/javascripts/ui.min.js"></script>
 	</body>
 </html>
