--- a/public/stylesheets/scss/ui.scss
+++ b/public/stylesheets/scss/ui.scss
@@ -1488,7 +1488,7 @@
 	width: 100%;
 	height: 100%;
 	@media (max-width: 1300px) {
-
+		padding: 0 25px;
 	}
 	@media (max-width: 700px) {
 
@@ -1514,7 +1514,7 @@
 		z-index: 1001;
 		padding-bottom: 50px;
 		@media (max-width: 1300px) {
-
+			width: 100%;
 		}
 		@media (max-width: 700px) {
 
